// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > Pop-up > should logout using auth provider's login method 1`] = `
<div>
  <main
    class="_Login_cc0d5f"
  >
    <h1
      class="_header_cc0d5f"
    >
      Blog API
    </h1>
    <form
      class="_form_cc0d5f"
    >
      <div
        class="_inputGroup_cc0d5f"
      >
        <label
          class="_label_cc0d5f"
          for="email"
        >
          Email
        </label>
        <input
          class="_input_cc0d5f"
          id="email"
          name="email"
          type="text"
          value=""
        />
      </div>
      <div
        class="_inputGroup_cc0d5f"
      >
        <label
          class="_label_cc0d5f"
          for="password"
        >
          Password
        </label>
        <input
          class="_input_cc0d5f"
          id="password"
          name="password"
          type="password"
          value=""
        />
      </div>
      <input
        class="_submit_cc0d5f"
        type="submit"
        value="Log In"
      />
    </form>
  </main>
</div>
`;

exports[`Dashboard > Pop-up > should make sidebar popup disappear 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Overview_65549a"
    >
      <h1
        class="_header_65549a"
      >
        Overview
      </h1>
      <div
        class="_message_65549a"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > Pop-up > should render sidebar popup 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <div
          class="_popup_f2f392"
        >
          <button
            class="_popupButton_f2f392"
          >
            Log Out
          </button>
        </div>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Overview_65549a"
    >
      <h1
        class="_header_65549a"
      >
        Overview
      </h1>
      <div
        class="_message_65549a"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > should render dashboard with comments 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Comments_5b6556"
    >
      <header
        class="_header_5b6556"
      >
        <h1>
          Comments
        </h1>
      </header>
      <div
        class="_message_214590"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > should render dashboard with overview (default view) 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Overview_65549a"
    >
      <h1
        class="_header_65549a"
      >
        Overview
      </h1>
      <div
        class="_message_65549a"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > should render dashboard with overview 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Overview_65549a"
    >
      <h1
        class="_header_65549a"
      >
        Overview
      </h1>
      <div
        class="_message_65549a"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > should render dashboard with posts 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Posts_d066aa"
    >
      <div
        class="_header_d066aa"
      >
        <h1>
          Posts
        </h1>
        <a
          data-discover="true"
          href="/dashboard/posts/create"
        >
          <button
            class="_create_d066aa"
          >
            Create
          </button>
        </a>
      </div>
      <div
        class="_message_3be64a"
      >
        Loading...
      </div>
    </main>
  </div>
</div>
`;

exports[`Dashboard > should render dashboard with settings 1`] = `
<div>
  <div
    class="_Dashboard_f2f392"
  >
    <aside
      class="_aside_f2f392"
    >
      <h1
        class="_header_f2f392"
      >
        Dashboard
      </h1>
      <nav
        class="_nav_f2f392"
      >
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard"
        >
          Overview
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/posts"
        >
          Posts
        </a>
        <a
          class="_link_f2f392"
          data-discover="true"
          href="/dashboard/comments"
        >
          Comments
        </a>
        <a
          class="_linkHightlight_f2f392"
          data-discover="true"
          href="/dashboard/settings"
        >
          Settings
        </a>
        <button
          class="_more_f2f392"
        >
          More
        </button>
      </nav>
    </aside>
    <main
      class="_Settings_5120b7"
    >
      <header
        class="_header_5120b7"
      >
        <h1>
          Settings
        </h1>
      </header>
      <nav
        class="_nav_5120b7"
      >
        <a
          class="_linkHighlight_5120b7"
          data-discover="true"
          href="/dashboard/profile"
        >
          Profile
        </a>
        <a
          class="_link_5120b7"
          data-discover="true"
          href="/dashboard/password"
        >
          Password
        </a>
      </nav>
      <h2
        class="_message_835a5b"
      >
        Loading...
      </h2>
    </main>
  </div>
</div>
`;
